--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-import pandas as pd
-import numpy as np
-import matplotlib.pyplot as plt
-import statsmodels.api as sm
-from sklearn.model_selection import train_test_split
-from sklearn.linear_model import LinearRegression
-from sklearn.metrics import mean_squared_error, r2_score
-from sklearn.cluster import KMeans
-import seaborn as sns
-import streamlit as st
-from sklearn.preprocessing import StandardScaler
+streamlit
+pandas
+matplotlib
+seaborn
+scikit-learn
+numpy
